--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,7 +11,7 @@
 		box-sizing: border-box;
 	}
 	body {
-		background-color: white;
+		background-color: #FFFFFF;
 	}
 	h1 {
 		margin: 100px;
@@ -47,7 +47,7 @@
 		text-align: center;
 		font-size: 125%;
 		font-weight: bold;
-		background-color: white;
+		background-color: #FFFFFF;
 		
 	}
 	.sub2 {
